...
    <string name="title_activity_registration">Register</string>
    <string name="approval_request_list_search_hint">"Search a request"</string>
    <string name="approval_request_fetch_error">Unable to fetch approval requests</string>


    <!-- Approval Requests Detail -->
    <string name="title_activity_approval_request_detail">Approval Request</string>
    <string name="approve_button_label">APPROVE</string>
    <string name="deny_button_label">DENY</string>
    <string name="deny_failed">Request cannot be denied</string>
    <string name="approve_failed">Request cannot be approved</string>
    <string name="approve_success">Request approved successfully</string>
    <string name="deny_success">Request denied successfully</string>
    <string name="transaction_not_updatable_warning">You can no longer approve or deny.</string>
    <string name="transaction_approved_message">This request has been approved.</string>
    <string name="transaction_denied_message">This request has been denied.</string>
    <string name="transaction_expired_message">Expired on %1$s</string>
    <string name="approval_request_action_refresh">Refresh</string>

    <!-- Registration screen -->
    <string name="registration_title">Device Registration</string>
    <string name="registration_user_id_label">User ID</string>
    <string name="registration_user_id_hint">abcdef12345678</string>
    <string name="registration_backend_url_label">Backend URL</string>
    <string name="registration_backend_url_hint">https required</string>
    <string name="registration_register_device_button_label">REGISTER DEVICE</string>
    <string name="registration_error_invalid_field">Make sure the value you entered is correct</string>
    <string name="registration_error_verification">Error registering the device</string>
    <string name="registration_error_device_deleted">Device deleted.\nEnter a new Authy ID and Backend URL</string>
</resources>

