<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/small_padding"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/info_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/transaction_primary_text_size"
        tools:text="Website:" />

    <TextView
        android:id="@+id/info_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="@dimen/small_padding"
        android:paddingLeft="@dimen/small_padding"
        android:paddingRight="@dimen/small_padding"
        android:paddingStart="@dimen/small_padding"
        android:singleLine="true"
        android:textColor="@color/darkGrey"
        android:textSize="@dimen/transaction_primary_text_size"
        tools:text="Coinbase" />

</LinearLayout>