...
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/transactionTime"
        android:layout_toRightOf="@+id/transactionLogo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transactionMessage"
            style="@style/OneTouchPrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="You have requested to send 1.00 BTC from CEX" />

        <TextView
...
