<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.twilio.authenticatorsample.registration.RegistrationActivity">

    <ScrollView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonContainer"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/titleContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/registration_title_height"
                android:layout_alignParentTop="true"
                android:background="@color/registration_title_bg">

                <TextView
                    android:id="@+id/signupTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left|start"
                    android:layout_marginBottom="17dp"
                    android:layout_marginLeft="@dimen/large_padding"
                    android:layout_marginStart="@dimen/large_padding"
                    android:text="@string/registration_title"
                    android:textColor="@color/registration_title_text_color"
                    android:textSize="@dimen/registration_text_size" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/formContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleContainer"
                android:layout_marginEnd="@dimen/large_padding"
                android:layout_marginLeft="@dimen/large_padding"
                android:layout_marginRight="@dimen/large_padding"
                android:layout_marginStart="@dimen/large_padding"
                android:orientation="vertical"
                android:paddingTop="@dimen/registration_form_padding_top">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_user_id_label" />

                <EditText
                    android:id="@+id/user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_user_id_hint"
                    android:inputType="text|textNoSuggestions"
                    android:textSize="@dimen/registration_form_field_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/registration_password_padding_top"
                    android:text="@string/registration_backend_url_label" />

                <EditText
                    android:id="@+id/backend_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registration_backend_url_hint"
                    android:inputType="textUri"
                    android:textSize="@dimen/registration_form_field_text_size" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/registerDeviceButton"
            style="@style/BorderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right|end"
            android:layout_marginEnd="@dimen/large_padding"
            android:layout_marginLeft="@dimen/large_padding"
            android:layout_marginRight="@dimen/large_padding"
            android:layout_marginStart="@dimen/large_padding"
            android:paddingBottom="@dimen/registration_button_padding_bottom"
            android:paddingLeft="@dimen/registration_button_padding_left"
            android:paddingRight="@dimen/registration_button_padding_right"
            android:paddingTop="@dimen/registration_button_padding_top"
            android:text="@string/registration_register_device_button_label"
            android:textColor="@drawable/selector_color_positive" />
    </FrameLayout>
</RelativeLayout>
